@@ -2,28 +2,27 @@ package com.example.socialcoffee.service;
 
 import com.example.socialcoffee.constants.CommonConstant;
 import com.example.socialcoffee.domain.*;
+import com.example.socialcoffee.domain.feature.*;
 import com.example.socialcoffee.dto.common.PageDtoOut;
 import com.example.socialcoffee.dto.request.CoffeeShopSearchRequest;
 import com.example.socialcoffee.dto.request.CreateCoffeeShopRequest;
 import com.example.socialcoffee.dto.response.*;
 import com.example.socialcoffee.enums.*;
-import com.example.socialcoffee.domain.feature.*;
-import com.example.socialcoffee.repository.AddressRepository;
-import com.example.socialcoffee.repository.CoffeeShopRepository;
-import com.example.socialcoffee.repository.DescriptionEmbeddingRepository;
-import com.example.socialcoffee.repository.ReviewRepository;
-import com.example.socialcoffee.repository.specification.CoffeeShopSpecification;
-import com.example.socialcoffee.utils.CoffeeShopUtil;
+import com.example.socialcoffee.neo4j.NCoffeeShop;
+import com.example.socialcoffee.neo4j.feature.*;
+import com.example.socialcoffee.neo4j.relationship.HasFeature;
+import com.example.socialcoffee.neo4j.relationship.HasFeature;
+import com.example.socialcoffee.repository.postgres.AddressRepository;
+import com.example.socialcoffee.repository.postgres.CoffeeShopRepository;
+import com.example.socialcoffee.repository.postgres.DescriptionEmbeddingRepository;
+import com.example.socialcoffee.utils.GeometryUtil;
 import com.example.socialcoffee.utils.SecurityUtil;
 import com.example.socialcoffee.utils.StringAppUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
-import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.jpa.domain.Specification;
-import org.springframework.data.util.Pair;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -42,12 +41,12 @@ public class CoffeeShopService {
     private final CacheableService cacheableService;
     private final CloudinaryService cloudinaryService;
     private final ImageService imageService;
-    private final ModelMapper modelMapper;
     private final DescriptionEmbeddingRepository descriptionEmbeddingRepository;
-    private final ReviewRepository reviewRepository;
+    private final RepoService repoService;
 
     @Transactional
-    public ResponseEntity<ResponseMetaData> createCoffeeShop(User user, CreateCoffeeShopRequest req) {
+    public ResponseEntity<ResponseMetaData> createCoffeeShop(User user,
+                                                             CreateCoffeeShopRequest req) {
         Address address = Address.builder()
                 .googleMapUrl(req.getGoogleMapUrl())
                 .addressDetail(req.getAddressDetail())
@@ -56,6 +55,8 @@ public class CoffeeShopService {
                 .ward(req.getWard())
                 .longitude(req.getLongitude())
                 .latitude(req.getLatitude())
+                .location(GeometryUtil.parseLocation(req.getLongitude(),
+                                                     req.getLatitude()))
                 .build();
         log.info("Start create coffee shop with name = {}",
                  req.getName());
@@ -72,102 +73,148 @@ public class CoffeeShopService {
         coffeeShop.setCloseHour(req.getCloseHour());
         coffeeShop.setAddress(savedAddress);
 
+        Set<HasFeature> hasFeatures = new HashSet<>();
         if (req.getAmbiances() != null && !req.getAmbiances().isEmpty()) {
             List<Ambiance> ambiances = cacheableService.findAmbiances().stream()
                     .filter(a -> req.getAmbiances().contains(a.getId()))
                     .toList();
-            coffeeShop.setAmbiances(ambiances);
+            for (final Ambiance ambiance : ambiances) {
+                NAmbiance nAmbiance = repoService.findNAmbianceById(ambiance.getId());
+                hasFeatures.add(HasFeature.builder().feature(nAmbiance).build());
+            }
         }
 
         if (req.getAmenities() != null && !req.getAmenities().isEmpty()) {
             List<Amenity> amenities = cacheableService.findAmenities().stream()
                     .filter(a -> req.getAmenities().contains(a.getId()))
                     .toList();
-            coffeeShop.setAmenities(amenities);
+            for (final Amenity amenity : amenities) {
+                NAmenity nAmenity = repoService.findNAmenityById(amenity.getId());
+                hasFeatures.add(HasFeature.builder().feature(nAmenity).build());
+            }
         }
 
         if (req.getCapacities() != null && !req.getCapacities().isEmpty()) {
             List<Capacity> capacities = cacheableService.findCapacities().stream()
                     .filter(c -> req.getCapacities().contains(c.getId()))
                     .toList();
-            coffeeShop.setCapacities(capacities);
+            for (final Capacity capacity : capacities) {
+                NCapacity nCapacity = repoService.findNCapacityById(capacity.getId());
+                hasFeatures.add(HasFeature.builder().feature(nCapacity).build());
+            }
         }
 
         if (req.getCategories() != null && !req.getCategories().isEmpty()) {
             List<Category> categories = cacheableService.findCategories().stream()
                     .filter(c -> req.getCategories().contains(c.getId()))
                     .toList();
-            coffeeShop.setCategories(categories);
+            for (final Category category : categories) {
+                NCategory nCategory = repoService.findNCategoryById(category.getId());
+                hasFeatures.add(HasFeature.builder().feature(nCategory).build());
+            }
         }
 
         if (req.getDressCodes() != null && !req.getDressCodes().isEmpty()) {
             List<DressCode> dressCodes = cacheableService.findDressCodes().stream()
                     .filter(d -> req.getDressCodes().contains(d.getId()))
                     .toList();
-            coffeeShop.setDressCodes(dressCodes);
+            for (final DressCode dressCode : dressCodes) {
+                NDressCode nDressCode = repoService.findNDressCodeById(dressCode.getId());
+                hasFeatures.add(HasFeature.builder().feature(nDressCode).build());
+            }
         }
 
         if (req.getEntertainments() != null && !req.getEntertainments().isEmpty()) {
             List<Entertainment> entertainments = cacheableService.findEntertainments().stream()
                     .filter(e -> req.getEntertainments().contains(e.getId()))
                     .toList();
-            coffeeShop.setEntertainments(entertainments);
+            for (final Entertainment entertainment : entertainments) {
+                NEntertainment nEntertainment = repoService.findNEntertainmentById(entertainment.getId());
+                hasFeatures.add(HasFeature.builder().feature(nEntertainment).build());
+            }
         }
 
         if (req.getParkings() != null && !req.getParkings().isEmpty()) {
             List<Parking> parkings = cacheableService.findParkings().stream()
                     .filter(p -> req.getParkings().contains(p.getId()))
                     .toList();
-            coffeeShop.setParkings(parkings);
+            for (final Parking parking : parkings) {
+                NParking nParking = repoService.findNParkingById(parking.getId());
+                hasFeatures.add(HasFeature.builder().feature(nParking).build());
+            }
         }
 
         if (req.getPrices() != null && !req.getPrices().isEmpty()) {
             List<Price> prices = cacheableService.findPrices().stream()
                     .filter(p -> req.getPrices().contains(p.getId()))
                     .toList();
-            coffeeShop.setPrices(prices);
+            for (final Price price : prices) {
+                NPrice nPrice = repoService.findNPriceById(price.getId());
+                hasFeatures.add(HasFeature.builder().feature(nPrice).build());
+            }
         }
 
         if (req.getServiceTypes() != null && !req.getServiceTypes().isEmpty()) {
             List<ServiceType> serviceTypes = cacheableService.findServiceTypes().stream()
                     .filter(s -> req.getServiceTypes().contains(s.getId()))
                     .toList();
-            coffeeShop.setServiceTypes(serviceTypes);
+            for (final ServiceType serviceType : serviceTypes) {
+                NServiceType nServiceType = repoService.findNServiceTypeById(serviceType.getId());
+                hasFeatures.add(HasFeature.builder().feature(nServiceType).build());
+            }
         }
 
         if (req.getSpaces() != null && !req.getSpaces().isEmpty()) {
             List<Space> spaces = cacheableService.findSpaces().stream()
                     .filter(s -> req.getSpaces().contains(s.getId()))
                     .toList();
-            coffeeShop.setSpaces(spaces);
+            for (final Space space : spaces) {
+                NSpace nSpace = repoService.findNSpaceById(space.getId());
+                hasFeatures.add(HasFeature.builder().feature(nSpace).build());
+            }
         }
 
         if (req.getSpecialties() != null && !req.getSpecialties().isEmpty()) {
             List<Specialty> specialties = cacheableService.findSpecialties().stream()
                     .filter(s -> req.getSpecialties().contains(s.getId()))
                     .toList();
-            coffeeShop.setSpecialties(specialties);
+            for (final Specialty specialty : specialties) {
+                NSpecialty nSpecialty = repoService.findNSpecialtyById(specialty.getId());
+                hasFeatures.add(HasFeature.builder().feature(nSpecialty).build());
+            }
         }
 
         if (req.getVisitTimes() != null && !req.getVisitTimes().isEmpty()) {
             List<VisitTime> visitTimes = cacheableService.findVisitTimes().stream()
                     .filter(v -> req.getVisitTimes().contains(v.getId()))
                     .toList();
-            coffeeShop.setVisitTimes(visitTimes);
+            for (final VisitTime visitTime : visitTimes) {
+                NVisitTime nVisitTime = repoService.findNVisitTimeById(visitTime.getId());
+                hasFeatures.add(HasFeature.builder().feature(nVisitTime).build());
+            }
         }
         coffeeShop.setGalleryPhotos(imageService.save(req.getGalleryPhotos()));
         coffeeShop.setCoverPhoto(cloudinaryService.upload(req.getCoverPhoto()));
-        coffeeShop.setDescription(generateTextService.generateDescription(coffeeShop.featureToString()));
+        coffeeShop.setDescription(generateTextService.generateCoffeeShopDescription(coffeeShop.featureToString(),
+                                                                                    CommonConstant.COFFEE_SHOP_DESCRIPTION_PROMPT));
         String userRole = SecurityUtil.getUserRole();
-        if(RoleEnum.ADMIN.getValue().equalsIgnoreCase(userRole)){
+        if (RoleEnum.ADMIN.getValue().equalsIgnoreCase(userRole)) {
             coffeeShop.setCreatedBy(CommonConstant.ADMIN_INDEX);
             coffeeShop.setStatus(Status.ACTIVE.getValue());
         } else {
             coffeeShop.setStatus(Status.PENDING.getValue());
             coffeeShop.setCreatedBy(user.getId());
         }
+        DescriptionEmbedding descriptionEmbedding = generateEmbeddingDescription(coffeeShop);
+        coffeeShop.setEmbeddingDescription(descriptionEmbedding);
         CoffeeShop saved = coffeeShopRepository.save(coffeeShop);
-        generateEmbeddingDescription(saved);
+        NCoffeeShop nCoffeeShop = NCoffeeShop.builder()
+                .id(saved.getId())
+                .name(saved.getName())
+                .coverPhoto(saved.getCoverPhoto())
+                .hasFeatures(hasFeatures)
+                .build();
+        repoService.saveNCoffeeShop(nCoffeeShop);
         log.info("Finish create coffee shop with name = {}, id = {}",
                  req.getName(),
                  coffeeShop.getId());
@@ -175,16 +222,16 @@ public class CoffeeShopService {
                                                       coffeeShop));
     }
 
-    private void generateEmbeddingDescription(CoffeeShop coffeeShop) {
+    private DescriptionEmbedding generateEmbeddingDescription(CoffeeShop coffeeShop) {
         try {
             Float[] embeddingDescription = sentenceTransformerService.generateEmbeddingDescription(StringAppUtils.removeNewLineCharacter(coffeeShop.getDescription()));
             DescriptionEmbedding descriptionEmbedding = DescriptionEmbedding.builder()
                     .descriptionEmbedding(embeddingDescription)
-                    .coffeeShop(coffeeShop)
                     .build();
-            descriptionEmbeddingRepository.save(descriptionEmbedding);
+            return descriptionEmbeddingRepository.save(descriptionEmbedding);
         } catch (Exception e) {
             log.error(e.getMessage());
+            return null;
         }
     }
 
@@ -197,9 +244,13 @@ public class CoffeeShopService {
                                                       coffeeShops));
     }
 
-    public ResponseEntity<ResponseMetaData> getAllCoffeeShop(final Pageable pageable) {
+    public ResponseEntity<ResponseMetaData> getAllCoffeeShop(final Double lat,
+                                                             final Double lng,
+                                                             final Pageable pageable) {
         final List<CoffeeShop> coffeeShops = coffeeShopRepository.findAll(pageable).getContent();
-        List<CoffeeShopVM> coffeeShopVMs = coffeeShops.stream().map(CoffeeShopVM::toVM).toList();
+        List<CoffeeShopVM> coffeeShopVMs = coffeeShops.stream().map(c -> CoffeeShopVM.toVM(c,
+                                                                                           lat,
+                                                                                           lng)).toList();
         return ResponseEntity.ok(new ResponseMetaData(new MetaDTO(MetaData.SUCCESS),
                                                       coffeeShopVMs));
     }
@@ -216,22 +267,28 @@ public class CoffeeShopService {
     }
 
     public ResponseEntity<ResponseMetaData> search(CoffeeShopSearchRequest request,
-                                                   Pageable pageable) {
-        Specification<CoffeeShop> spec = CoffeeShopSpecification.searchCoffeeShops(request);
-        final Page<CoffeeShop> coffeeShops = coffeeShopRepository.findAll(spec,
-                                                                          pageable);
-        final List<Long> shopIds = coffeeShops.getContent().stream().map(CoffeeShop::getId).toList();
-        final List<Object[]> averageRatings = reviewRepository.getAverageRatingByCoffeeShopId(shopIds);
-        Map<Long, Pair<Double, Long>> ratingMap = CoffeeShopUtil.toRatingMap(averageRatings);
-        List<CoffeeShopVM> coffeeShopVMs = coffeeShops.stream().map(c -> CoffeeShopVM.toVM(c, ratingMap))
-                .toList();
-        PageDtoOut<CoffeeShopVM> pageDtoOut = PageDtoOut.from(pageable.getPageNumber(),
-                                                              pageable.getPageSize(),
+                                                   Integer page,
+                                                   Integer size) {
+        Page<CoffeeShop> coffeeShops = coffeeShopRepository.searchCoffeeShops(request,
+                                                                              page,
+                                                                              size);
+        List<CoffeeShopVM> coffeeShopVMs = coffeeShops.stream().map(c -> CoffeeShopVM.toVM(c,
+                                                                                           request.getLatitude(),
+                                                                                           request.getLongitude()))
+                .collect(Collectors.toList());
+//        if (ObjectUtils.allNotNull(request.getDistance(),
+//                                   request.getLongitude(),
+//                                   request.getLatitude())) {
+//            coffeeShopVMs.sort(Comparator.comparing(CoffeeShopVM::getDistance));
+//        }
+        PageDtoOut<CoffeeShopVM> pageDtoOut = PageDtoOut.from(page,
+                                                              size,
                                                               coffeeShops.getTotalElements(),
                                                               coffeeShopVMs);
         return ResponseEntity.ok().body(new ResponseMetaData(new MetaDTO(MetaData.SUCCESS),
                                                              pageDtoOut));
     }
+
 
     public ResponseEntity<ResponseMetaData> getSearchFilters() {
         SearchFilter searchFilter = new SearchFilter();
@@ -246,16 +303,19 @@ public class CoffeeShopService {
         searchFilter.setSpaces(cacheableService.findSpaces());
         searchFilter.setSpecialties(cacheableService.findSpecialties());
         searchFilter.setVisitTimes(cacheableService.findVisitTimes());
-        searchFilter.setDistances(Arrays.stream(Distance.values()).map(d -> new SearchFilter.DistanceDTO((long) d.ordinal(), d.getValue())).collect(Collectors.toList()));
-        searchFilter.setSorts(Arrays.stream(CoffeeShopSort.values()).map(s -> new SearchFilter.SortDTO((long) s.ordinal(), s.getValue())).collect(Collectors.toList()));
+        searchFilter.setDistances(Arrays.stream(Distance.values()).map(d -> new SearchFilter.DistanceDTO((long) d.ordinal(),
+                                                                                                         d.getValue())).collect(Collectors.toList()));
+        searchFilter.setSorts(Arrays.stream(CoffeeShopSort.values()).map(s -> new SearchFilter.SortDTO((long) s.ordinal(),
+                                                                                                       s.getValue())).collect(Collectors.toList()));
         return ResponseEntity.ok().body(new ResponseMetaData(new MetaDTO(MetaData.SUCCESS),
                                                              searchFilter));
     }
 
     @Transactional
-    public ResponseEntity<ResponseMetaData> updateCoffeeShopStatus(Long shopId, String newStatus) {
+    public ResponseEntity<ResponseMetaData> updateCoffeeShopStatus(Long shopId,
+                                                                   String newStatus) {
         CoffeeShop coffeeShop = coffeeShopRepository.findByShopId(shopId);
-        if(Objects.isNull(coffeeShop)) {
+        if (Objects.isNull(coffeeShop)) {
             return ResponseEntity.badRequest().body(new ResponseMetaData(new MetaDTO(MetaData.NOT_FOUND)));
         }
 
@@ -267,20 +327,35 @@ public class CoffeeShopService {
         return ResponseEntity.ok().body(new ResponseMetaData(new MetaDTO(MetaData.SUCCESS)));
     }
 
-    public Page<CoffeeShopDTO> findCoffeeShops(String name, String status, Pageable pageable) {
+    public Page<CoffeeShopDTO> findCoffeeShops(String name,
+                                               String status,
+                                               Pageable pageable) {
         String statusValue = StringUtils.isBlank(status) ? status : null;
 
         Page<CoffeeShop> coffeeShops;
         if (name != null && statusValue != null) {
-            coffeeShops = coffeeShopRepository.findByNameContainingIgnoreCaseAndStatus(name, statusValue, pageable);
+            coffeeShops = coffeeShopRepository.findByNameContainingIgnoreCaseAndStatus(name,
+                                                                                       statusValue,
+                                                                                       pageable);
         } else if (name != null) {
-            coffeeShops = coffeeShopRepository.findByNameContainingIgnoreCase(name, pageable);
+            coffeeShops = coffeeShopRepository.findByNameContainingIgnoreCase(name,
+                                                                              pageable);
         } else if (statusValue != null) {
-            coffeeShops = coffeeShopRepository.findByStatus(statusValue, pageable);
+            coffeeShops = coffeeShopRepository.findByStatus(statusValue,
+                                                            pageable);
         } else {
             coffeeShops = coffeeShopRepository.findAll(pageable);
         }
 
         return coffeeShops.map(CoffeeShop::toCoffeeShopDTO);
     }
+
+    public ResponseEntity<ResponseMetaData> migrateRelationship() {
+        final List<CoffeeShop> all = repoService.fetchCoffeeShopsFromPostgres();
+        for (final CoffeeShop coffeeShop : all) {
+           repoService.migrateSingleCoffeeShop(coffeeShop);
+        }
+        return ResponseEntity.ok().build();
+    }
+
 }
